...
            "value" : "%lld個を追加"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Add Color" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Añadir color"
...
            "value" : "B"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Back" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Atrás"
...
            "value" : "キャンセル"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Canvas" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Lienzo"
...
            "value" : "カラースペクトル"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Colors" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Colores"
...
            "value" : "コンテンツ"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Continue" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continuar"
...
            "value" : "クリーム"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Create" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Crear"
...
            "value" : "閉じる"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Display Name" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nombre visible"
...
            "value" : "パレットのカラーを取得"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Get Started" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Comenzar"
...
            "value" : "Opaliteの成長に合わせて、新しいOnyx機能も追加されます。"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "New Palette" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nueva paleta"
...
            "value" : "パレットのプレビュー、%@、%lld色"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Palettes" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Paletas"
...
            "value" : "プラットフォーム"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Portfolio" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Portafolio"
...
            "value" : "彩度と明度"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Save" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Guardar"
...
            "value" : "画面"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Search" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Buscar"
...
            "value" : "インクのカラーを設定します"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ajustes"
...
            "value" : "シャッフル"
          }
        }
      },
      "shouldGenerateSymbol" : false
    },
    "Shuffle color" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Color aleatorio"
...
